--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -139,6 +139,14 @@ h1, h2, h3, h4, h5, h6 {
   text-align: justify;
 }
 
+.left-margin {
+  margin-left: auto;
+}
+
+.right-margin {
+  margin-right: auto
+}
+
 .wide-lines {
   line-height: 30px;
 }
@@ -185,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
     -webkit-transform: translate3d(0,0,0);
   }
-  
+
   .site {
     display: flex;
     min-height: 100vh;
